--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@discordjs/voice": "^0.16.0",
     "2captcha": "^3.0.7",
     "discord.js-selfbot-v13": "^2.14.9",
+    "dotenv": "^16.3.1",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "play-dl": "^1.9.6",
